// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render correctly when inverted 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render correctly when inverted and outlined 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render correctly when outlined 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render the danger variant correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
  background-color: #ff3860;
  border-color: transparent;
  color: #fff;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

.c0:hover {
  background-color: #ff2b56;
  border-color: transparent;
  color: #fff;
}

.c0:focus {
  border-color: transparent;
  color: #fff;
}

.c0:active {
  background-color: #ff1f4c;
  border-color: transparent;
  color: #fff;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(255,56,96,0.25);
}

.c0[disabled] {
  background-color: #ff3860;
  border-color: transparent;
  box-shadow: none;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render the danger variant correctly when inverted 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
  background-color: #ff3860;
  border-color: transparent;
  color: #fff;
  background-color: #fff;
  color: #ff3860;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

.c0:hover {
  background-color: #ff2b56;
  border-color: transparent;
  color: #fff;
}

.c0:focus {
  border-color: transparent;
  color: #fff;
}

.c0:active {
  background-color: #ff1f4c;
  border-color: transparent;
  color: #fff;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(255,56,96,0.25);
}

.c0[disabled] {
  background-color: #ff3860;
  border-color: transparent;
  box-shadow: none;
}

.c0:hover {
  background-color: #f9f9f9;
  color: #ff3860;
}

.c0:focus {
  color: #ff3860;
}

.c0:active {
  background-color: #f2f2f2;
  color: #ff3860;
}

.c0[disabled] {
  background-color: #fff;
  color: #ff3860;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render the danger variant correctly when inverted and outlined 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
  background-color: #ff3860;
  border-color: transparent;
  color: #fff;
  background-color: transparent;
  border-color: #fff;
  color: #fff;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

.c0:hover {
  background-color: #ff2b56;
  border-color: transparent;
  color: #fff;
}

.c0:focus {
  border-color: transparent;
  color: #fff;
}

.c0:active {
  background-color: #ff1f4c;
  border-color: transparent;
  color: #fff;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(255,56,96,0.25);
}

.c0[disabled] {
  background-color: #ff3860;
  border-color: transparent;
  box-shadow: none;
}

.c0:hover,
.c0:focus {
  background-color: #fff;
  color: #ff3860;
}

.c0:active {
  background-color: #fff;
  border-color: #fff;
  color: #ff2b56;
}

.c0[disabled] {
  background-color: transparent;
  border-color: #fff;
  color: #fff;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render the danger variant correctly when outlined 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
  background-color: #ff3860;
  border-color: transparent;
  color: #fff;
  background-color: transparent;
  border-color: #ff3860;
  color: #ff3860;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

.c0:hover {
  background-color: #ff2b56;
  border-color: transparent;
  color: #fff;
}

.c0:focus {
  border-color: transparent;
  color: #fff;
}

.c0:active {
  background-color: #ff1f4c;
  border-color: transparent;
  color: #fff;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(255,56,96,0.25);
}

.c0[disabled] {
  background-color: #ff3860;
  border-color: transparent;
  box-shadow: none;
}

.c0:hover,
.c0:focus {
  background-color: #ff3860;
  border-color: #ff3860;
  color: #fff;
}

.c0:active {
  background-color: #ff2b56;
  border-color: #ff2b56;
  color: #fff;
}

.c0[disabled] {
  background-color: transparent;
  border-color: #ff3860;
  color: #ff3860;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render the primary variant correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
  background-color: #00d1b2;
  border-color: transparent;
  color: #fff;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

.c0:hover {
  background-color: #00c4a7;
  border-color: transparent;
  color: #fff;
}

.c0:focus {
  border-color: transparent;
  color: #fff;
}

.c0:active {
  background-color: #00b89c;
  border-color: transparent;
  color: #fff;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(0,209,178,0.25);
}

.c0[disabled] {
  background-color: #00d1b2;
  border-color: transparent;
  box-shadow: none;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render the primary variant correctly when inverted 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
  background-color: #00d1b2;
  border-color: transparent;
  color: #fff;
  background-color: #fff;
  color: #00d1b2;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

.c0:hover {
  background-color: #00c4a7;
  border-color: transparent;
  color: #fff;
}

.c0:focus {
  border-color: transparent;
  color: #fff;
}

.c0:active {
  background-color: #00b89c;
  border-color: transparent;
  color: #fff;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(0,209,178,0.25);
}

.c0[disabled] {
  background-color: #00d1b2;
  border-color: transparent;
  box-shadow: none;
}

.c0:hover {
  background-color: #f9f9f9;
  color: #00d1b2;
}

.c0:focus {
  color: #00d1b2;
}

.c0:active {
  background-color: #f2f2f2;
  color: #00d1b2;
}

.c0[disabled] {
  background-color: #fff;
  color: #00d1b2;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render the primary variant correctly when inverted and outlined 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
  background-color: #00d1b2;
  border-color: transparent;
  color: #fff;
  background-color: transparent;
  border-color: #fff;
  color: #fff;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

.c0:hover {
  background-color: #00c4a7;
  border-color: transparent;
  color: #fff;
}

.c0:focus {
  border-color: transparent;
  color: #fff;
}

.c0:active {
  background-color: #00b89c;
  border-color: transparent;
  color: #fff;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(0,209,178,0.25);
}

.c0[disabled] {
  background-color: #00d1b2;
  border-color: transparent;
  box-shadow: none;
}

.c0:hover,
.c0:focus {
  background-color: #fff;
  color: #00d1b2;
}

.c0:active {
  background-color: #fff;
  border-color: #fff;
  color: #00c4a7;
}

.c0[disabled] {
  background-color: transparent;
  border-color: #fff;
  color: #fff;
}

<button
  class="c0"
>
  child
</button>
`;

exports[`should render the primary variant correctly when outlined 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  height: 2.25em;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  position: relative;
  vertical-align: top;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  border-color: #dbdbdb;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: calc(0.3125em - 1px);
  padding-left: 0.5625em;
  padding-right: 0.5625em;
  padding-top: calc(0.3125em - 1px);
  text-align: center;
  white-space: nowrap;
  background-color: #00d1b2;
  border-color: transparent;
  color: #fff;
  background-color: transparent;
  border-color: #00d1b2;
  color: #00d1b2;
}

.c0:focus,
.c0:active {
  outline: none;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0 strong {
  color: inherit;
}

.c0:hover {
  border-color: #b5b5b5;
  color: #363636;
}

.c0:focus {
  border-color: #3273dc;
  color: #363636;
}

.c0:active {
  background-color: #fff;
  border-color: #4a4a4a;
  color: #363636;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
}

.c0[disabled] {
  background-color: #fff;
  border-color: #dbdbdb;
  box-shadow: none;
  opacity: 0.5;
}

.c0:hover {
  background-color: #00c4a7;
  border-color: transparent;
  color: #fff;
}

.c0:focus {
  border-color: transparent;
  color: #fff;
}

.c0:active {
  background-color: #00b89c;
  border-color: transparent;
  color: #fff;
}

.c0:focus:enabled:not(:active) {
  box-shadow: 0 0 0 0.125em rgba(0,209,178,0.25);
}

.c0[disabled] {
  background-color: #00d1b2;
  border-color: transparent;
  box-shadow: none;
}

.c0:hover,
.c0:focus {
  background-color: #00d1b2;
  border-color: #00d1b2;
  color: #fff;
}

.c0:active {
  background-color: #00c4a7;
  border-color: #00c4a7;
  color: #fff;
}

.c0[disabled] {
  background-color: transparent;
  border-color: #00d1b2;
  color: #00d1b2;
}

<button
  class="c0"
>
  child
</button>
`;
